Add HTML structure and apply base grid layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,240 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
+  <aside>
+    <div class="logo">
+      <img src="" alt="">
+      <h1>Dashboard</h1>
+    </div>
+    <nav>
+      <section>
+        <ul>
+          <li>
+            <img src="" alt="">
+            Home
+          </li>
+          <li>
+            <img src="" alt="">
+            Profile
+          </li>
+          <li>
+            <img src="" alt="">
+            Messages
+          </li>
+          <li>
+            <img src="" alt="">
+            History
+          </li>
+          <li>
+            <img src="" alt="">
+            Tasks
+          </li>
+          <li>
+            <img src="" alt="">
+            Communities
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="" alt="">
+            Settings
+          </li>
+          <li>
+            <img src="" alt="">
+            Support
+          </li>
+          <li>
+            <img src="" alt="">
+            Privacy
+          </li>
+        </ul>
+      </section>
+    </nav>
+  </aside>
+  <header>
+    <div>
+      <form action="#">
+        <button type="submit">
+          <img src="" alt="">
+        </button>
+        <input type="text" name="" id="">
+      </form>
+      <div class="notifications">
+        <button>
+          <img src="" alt="">
+        </button>
+        <div class="avatar-min">
+          <img src="" alt="">
+        </div>
+        <h3>Joaquín Morales</h3>
+      </div>
+    </div>
+    <div>
+      <div class="profile">
+        <div class="avatar">
+          <img src="" alt="">
+        </div>
+        <div class="welcome">
+          <p>Hi there,</p>
+          <h2>Joaquín Morales (@JoacoDev)</h2>
+        </div>
+      </div>
+      <div class="buttons">
+        <button class="btn">New</button>
+        <button class="btn">Upload</button>
+        <button class="btn">Share</button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="projects">
+      <h3>Your Projects</h3>
+      <div class="container">
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+        <article>
+          <h4>Super Cool Project</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <div class="interactions">
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+            <button>
+              <img src="" alt="">
+            </button>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section class="announcements">
+      <h3>Announcements</h3>
+      <article>
+        <div>
+          <h4>Site Maintenance</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+        </div>
+        <div>
+          <h4>Site Maintenance</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+        </div>
+        <div>
+          <h4>Site Maintenance</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+        </div>
+      </article>
+    </section>
+    <section class="trending">
+      <h3>Trending</h3>
+      <article>
+        <div>
+          <div>
+            <img src="" alt="">
+          </div>
+          <span>@tegan</span>
+          <p>World Peace Builder</p>
+        </div>
+        <div>
+          <div>
+            <img src="" alt="">
+          </div>
+          <span>@tegan</span>
+          <p>World Peace Builder</p>
+        </div>
+        <div>
+          <div>
+            <img src="" alt="">
+          </div>
+          <span>@tegan</span>
+          <p>World Peace Builder</p>
+        </div>
+        <div>
+          <div>
+            <img src="" alt="">
+          </div>
+          <span>@tegan</span>
+          <p>World Peace Builder</p>
+        </div>
+      </article>
+    </section>
+  </main>
   
 </body>
 </html>
