Finish header and main section layout

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <body>
   <aside>
     <div class="logo">
-      <img src="" alt="">
+      <img width="40px" src="./icons/logo.svg" alt="">
       <h1>Dashboard</h1>
     </div>
     <nav>
       <section>
         <ul>
           <li>
-            <img src="" alt="">
+            <img src="./icons/home.svg" alt="">
             Home
           </li>
           <li>
-            <img src="" alt="">
+            <img src="/icons/profile.svg" alt="">
             Profile
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/chat.svg" alt="">
             Messages
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/history.svg" alt="">
             History
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/task.svg" alt="">
             Tasks
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/groups.svg" alt="">
             Communities
           </li>
         </ul>
@@ -44,15 +44,15 @@
       <section>
         <ul>
           <li>
-            <img src="" alt="">
+            <img src="./icons/settings.svg" alt="">
             Settings
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/help.svg" alt="">
             Support
           </li>
           <li>
-            <img src="" alt="">
+            <img src="./icons/privacy.svg" alt="">
             Privacy
           </li>
         </ul>
@@ -62,22 +62,22 @@
   <header>
     <form action="#">
       <button type="submit">
-        <img src="" alt="">
+        <img src="./icons/search.svg" alt="">
       </button>
       <input type="text" name="" id="">
     </form>
     <div class="notifications">
       <button>
-        <img src="" alt="">
+        <img src="./icons/bell.svg" alt="">
       </button>
       <div class="avatar-min">
-        <img src="" alt="">
+        <img src="./images/profile-pic.png" alt="">
       </div>
-      <h3>Joaquín Morales</h3>
+      <h4>Joaquín Morales</h4>
     </div>
     <div class="profile">
       <div class="avatar">
-        <img src="" alt="">
+        <img src="./images/profile-pic.png" alt="">
       </div>
       <div class="welcome">
         <p>Hi there,</p>
@@ -96,91 +96,91 @@
       <div class="container">
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
         <article>
           <h4>Super Cool Project</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad. A maiores blanditiis adipisci maxime?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam libero dolores in veniam necessitatibus quas amet earum dolor, fugiat sequi asperiores tenetur repellendus minima ad</p>
           <div class="interactions">
             <button>
-              <img src="" alt="">
+              <img src="./icons/star.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/eye.svg" alt="">
             </button>
             <button>
-              <img src="" alt="">
+              <img src="./icons/code.svg" alt="">
             </button>
           </div>
         </article>
@@ -191,48 +191,58 @@
       <article>
         <div>
           <h4>Site Maintenance</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere</p>
         </div>
+        <hr>
         <div>
           <h4>Site Maintenance</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere</p>
         </div>
+        <hr>
         <div>
           <h4>Site Maintenance</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere, maiores sint quisquam sit quos laudantium distinctio. Explicabo, tempora quae!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quos tenetur dolorem ipsa? Qui architecto omnis magni excepturi placeat facere</p>
         </div>
       </article>
     </section>
     <section class="trending">
       <h3>Trending</h3>
       <article>
-        <div>
-          <div>
+        <div class="trend">
+          <div class="avatar-min">
             <img src="" alt="">
           </div>
-          <span>@tegan</span>
-          <p>World Peace Builder</p>
+          <div class="trend-info">
+            <span>@tegan</span>
+            <p>World Peace Builder</p>
+          </div>
         </div>
-        <div>
-          <div>
+        <div class="trend">
+          <div class="avatar-min">
             <img src="" alt="">
           </div>
-          <span>@tegan</span>
-          <p>World Peace Builder</p>
+          <div class="trend-info">
+            <span>@tegan</span>
+            <p>World Peace Builder</p>
+          </div>
         </div>
-        <div>
-          <div>
+        <div class="trend">
+          <div class="avatar-min">
             <img src="" alt="">
           </div>
-          <span>@tegan</span>
-          <p>World Peace Builder</p>
+          <div class="trend-info">
+            <span>@tegan</span>
+            <p>World Peace Builder</p>
+          </div>
         </div>
-        <div>
-          <div>
+        <div class="trend">
+          <div class="avatar-min">
             <img src="" alt="">
           </div>
-          <span>@tegan</span>
-          <p>World Peace Builder</p>
+          <div class="trend-info">
+            <span>@tegan</span>
+            <p>World Peace Builder</p>
+          </div>
         </div>
       </article>
     </section>
